--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,6 @@
     "strict": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
   }
 }
