--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.28.2",
+    "bufferutil": "^4.0.3",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
@@ -20,9 +21,11 @@
     "morgan": "^1.10.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.1.3",
     "ts-node": "^10.1.0",
     "typeorm": "^0.2.34",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "utf-8-validate": "^5.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
